fix: use responsive table class in TableV2 to fix overflow issues

--- a/src/users/index.scss
+++ b/src/users/index.scss
@@ -6,6 +6,6 @@ button.neg-margin-top {
   margin-top: -7px;
 }
 
-.word_break {
+a.word_break {
   word-break: break-word;
 }
